syntax = "proto3";

package liara;

import "google/protobuf/timestamp.proto";

option go_package = "https://github.com/liaradb/liara";

service EventSourceService {
  rpc Append(AppendRequest) returns (AppendResponse) {}
  rpc TestIdempotency(TestIdempotencyRequest)
      returns (TestIdempotencyResponse) {}
  rpc Get(GetRequest) returns (stream Event) {}
  rpc GetByAggregateIDAndName(GetByAggregateIDAndNameRequest)
      returns (stream Event) {}
  rpc GetAfterGlobalVersion(GetAfterGlobalVersionRequest)
      returns (stream Event) {}
  rpc GetByOutbox(GetByOutboxRequest) returns (stream Event) {}
  rpc CreateOutbox(CreateOutboxRequest) returns (CreateOutboxResponse) {}
  rpc GetOutbox(GetOutboxRequest) returns (GetOutboxResponse) {}
  rpc UpdateOutboxPosition(UpdateOutboxPositionRequest)
      returns (UpdateOutboxPositionResponse) {}
  rpc CreateTenant(CreateTenantRequest) returns (CreateTenantReponse) {}
  rpc DeleteTenant(DeleteTenantRequest) returns (DeleteTenantResponse) {}
  rpc RenameTenant(RenameTenantRequest) returns (RenameTenantResponse) {}
  rpc GetTenant(GetTenantRequest) returns (GetTenantResponse) {}
  rpc ListOutboxes(ListOutboxesRequest) returns (stream Outbox) {}
  rpc ListTenants(ListTenantsRequest) returns (stream Tenant) {}
}

message Event {
  // The global version of the Event
  int64 global_version = 1;

  // The ID of the Event, used for de-duplication
  string id = 2;

  // The name of the Aggregate
  string aggregate_name = 3;

  // The ID of the Aggregate to which this Event applies
  string aggregate_id = 4;

  // The Version of the Aggregate
  int64 version = 5;

  // The ID to partition Events
  int32 partition_id = 6;

  // The Name of the Event
  string name = 7;

  // The Schema for the internal data
  string schema = 8;

  // The Metadata for the Event
  EventMetadata metadata = 9;

  // The internal data of the Event
  bytes data = 10;
}

message EventMetadata {
  // The ID of the entire Command and Event chain
  string correlation_id = 1;

  // The ID of the User issuing the Command
  string user_id = 2;

  // The Time this Event was created
  google.protobuf.Timestamp time = 3;
}

// -----------------------------------------------------------------------------
// Append
// -----------------------------------------------------------------------------

message AppendOptions {
  // The ID of the Request, for idempotency
  string request_id = 1;

  // The ID of the entire Command and Event chain
  string correlation_id = 2;

  // The ID of the User issuing the Command
  string user_id = 3;

  // The Time this Event was created
  google.protobuf.Timestamp time = 4;
}

message AppendEvent {
  // The ID of the Event, used for de-duplication
  string id = 1;

  // The name of the Aggregate
  string aggregate_name = 2;

  // The ID of the Aggregate to which this Event applies
  string aggregate_id = 3;

  // The Version of the Aggregate
  int64 version = 4;

  // The Name of the Event
  string name = 5;

  // The Schema for the internal data
  string schema = 6;

  // The internal data of the Event
  bytes data = 7;
}

message AppendRequest {
  string tenant_id = 1;

  // The ID to partition Events
  int32 partition_id = 2;

  AppendOptions options = 3;

  repeated AppendEvent events = 4;
}

message AppendResponse {}

// -----------------------------------------------------------------------------
// Test Idempotency
// -----------------------------------------------------------------------------

message TestIdempotencyRequest {
  string tenant_id = 1;
  string request_id = 2;
}

message TestIdempotencyResponse {
  bool ok = 1;
}

// -----------------------------------------------------------------------------
// Get
// -----------------------------------------------------------------------------

message GetRequest {
  string tenant_id = 1;
  int32 partition_id = 2;
  string aggregate_id = 3;
}

// -----------------------------------------------------------------------------
// Get By Aggregate ID And Name
// -----------------------------------------------------------------------------

message GetByAggregateIDAndNameRequest {
  string tenant_id = 1;
  int32 partition_id = 2;
  string aggregate_id = 3;
  string name = 4;
}

// -----------------------------------------------------------------------------
// Get After Global Version
// -----------------------------------------------------------------------------

message GetAfterGlobalVersionRequest {
  string tenant_id = 1;
  int64 global_version = 2;
  int32 low = 3;
  int32 high = 4;
  int64 limit = 5;
}

// -----------------------------------------------------------------------------
// Get By Outbox
// -----------------------------------------------------------------------------

message GetByOutboxRequest {
  string tenant_id = 1;
  string outbox_id = 2;
  int64 limit = 3;
}

// -----------------------------------------------------------------------------
// Create Outbox
// -----------------------------------------------------------------------------

message CreateOutboxRequest {
  string tenant_id = 1;
  int32 low = 2;
  int32 high = 3;
}

message CreateOutboxResponse {
  string outbox_id = 1;
}

// -----------------------------------------------------------------------------
// Get Outbox
// -----------------------------------------------------------------------------

message GetOutboxRequest {
  string tenant_id = 1;
  string outbox_id = 2;
}

message GetOutboxResponse {
  int64 global_version = 1;
  int32 low = 2;
  int32 high = 3;
}

// -----------------------------------------------------------------------------
// Update Outbox Position
// -----------------------------------------------------------------------------

message UpdateOutboxPositionRequest {
  string tenant_id = 1;
  string outbox_id = 2;
  int64 global_version = 3;
}

message UpdateOutboxPositionResponse {}

// -----------------------------------------------------------------------------
// Create Tenant
// -----------------------------------------------------------------------------

message CreateTenantRequest {
  string name = 1;
}

message CreateTenantReponse {
  string tenant_id = 1;
}

// -----------------------------------------------------------------------------
// Delete Tenant
// -----------------------------------------------------------------------------

message DeleteTenantRequest {
  string tenant_id = 1;
}

message DeleteTenantResponse {}

// -----------------------------------------------------------------------------
// Rename Tenant
// -----------------------------------------------------------------------------

message RenameTenantRequest {
  string tenant_id = 1;
  string name = 2;
}

message RenameTenantResponse {}

// -----------------------------------------------------------------------------
// Get Tenant
// -----------------------------------------------------------------------------

message GetTenantRequest {
  string tenant_id = 1;
}

message GetTenantResponse {
  Tenant tenant = 1;
}

// -----------------------------------------------------------------------------
// List Outboxes
// -----------------------------------------------------------------------------

message ListOutboxesRequest {
  string tenant_id = 1;
}

message Outbox {
  string outbox_id = 1;
  int64 global_version = 2;
  int32 low = 3;
  int32 high = 4;
}

// -----------------------------------------------------------------------------
// List Tenants
// -----------------------------------------------------------------------------

message ListTenantsRequest {}

message Tenant {
  string tenant_id = 1;
  string name = 2;
}
